RoomEasePhoneGapProject/www/css/index.css
@font-face {
    font-family: "Zag";
    src: url("../font/zag/Zag-Bold.otf") format("opentype");
}

/* Feed view style rules */
.feedBtn {
    width: 29%;
    height: 7%;
    bottom: 2%;
    position: fixed;
}

#slide-out {
    padding-top: 10px;
}

.nav-wrapper {
    padding-top: 10px;
    padding-bottom: 10px;
}
#navbar {
    height: 66px;
}
.navbar-fixed {
    margin-bottom: 10px;
    height: 66px;
}

.page-title {
    margin-bottom: 10px;
}

#feed-container {
    position: fixed;
    overflow: scroll;
    top: 10%;
    height: 72%;
    width: 100%;
    padding-bottom: 1em;
}

#shortcut-container {
    position: fixed;
    top: 82%;
    width: 100%;
    height: 20%;
    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.16), 10px 10px 10px 10px rgba(0, 0, 0, 0.12);
    transition: box-shadow .25s;
}

#list-module-btn {
    left: 3%;
}

#fridge-module-btn {
    left: 35.5%;
}

#reservation-module-btn {
    right: 3%;
}

#popupDivider {
    left: 0;
    position: relative;
    width: 150%;
    margin: 0 -10%;
}

ul {
    margin:0 0 0 1.25em;
    padding:0;
    font-family: Zag;
}

li {
    margin:0;
    padding:0;
    line-height: 1.25em;
    font-family: Zag;
}

h1, h2, h3, h4, h5, h6, header {
    color: #f8bbd0;
    font-family: Zag;
}

a {
    font-family: Zag;
    font-size: 2em;
}

#slide-out a {
    font-size: 1.5em;
}

input[type="text"] {
    font-size: 1.3em;
}

::-webkit-input-placeholder {
    color: #b2dfdb;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 1em;
    font-style: italic;
}

#loading-icon {
    background-color: rgba(0, 0, 0, .4);
    position: fixed;
    top: 0;
    width: 100%;
    height: 100%;
    display: none;
    z-index:995;
}

#loading-icon-inner {
    z-index: 996;
    position: fixed;
    left: 40%;
    top: 40%;   
}


.list-item {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    transition: box-shadow .25s;
    margin: 1rem 0 0 1rem;
    border-radius: 2px;
    background-color: #80cbc4;
    width: 94%;
    padding: 0.1rem 0.5rem 0.5rem 0.85rem;
}

.popup {
    position: fixed;
    width: 93%;
    height: 83%;
    left: 0%;
    top: 13%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin: .5rem 0 1rem 1rem;
    padding: 0 1em 1em 1em;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 990;
}

.reservation_happening_color {
    background-color: #f8bbd0;
}

.reservation_happened_color {
    background-color:#cdcdcd;
}

.reservation_not_happened_color {
    background-color: #80cbc4;
}

.reservation-item {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    transition: box-shadow .25s;
    margin: 1rem 0 0 1rem;
    border-radius: 2px;
    width: 94%;
    padding: 0.1rem 0.5rem 0.5rem 0.85rem;
}

.error-popup {
    position: fixed;
    display: none;
    width: 70%;
    height: 20%;
    left: 15%;
    top: 40%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin .5rem 0 1rem 1rem;
    padding: 10px;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 990;
}

#delete-fridge-item-popup{
    position: fixed;
    display: none;
    width: 70%;
    height: 20%;
    left: 15%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin .5rem 0 1rem 1rem;
    padding: 10px;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 990;
}

.popupBackground {
    background-color: rgba(0, 0, 0, .4);
    position: fixed;
    width: 100%;
    height: 93%;
    top: 7%;
    display: none;
    z-index:901;
}

.list-entry {
    height: 67%;
    top:30%;
    width: 100%;
    background-color: #80cbc4; 
    color: white;
    overflow: scroll;
}

.all-reservation-items {
    display:block
}


.delete-reservation-popup {
    position: fixed;
    width: 100%;
    height: 60%;
    top: 1%;
}

.popup-button {
    background-color: #4db6ac;
    box-shadow: none;
    text-align: center;
    width: 30%;
    margin: 0 0 0 0;
    padding: 0;
}

/** the following are components of .popupBackground **/
#name, #descrip-text {
    width: 100%;
    background-color: transparent;
    border-bottom: 1px solid white;
    border-top: 0;
    border-left: 0;
    color: white;
}

#items {
    height: 43%;
    border: 0;
    border-radius: 4px;
    background-color: #4db6ac;
    color: white;
    margin-bottom: 5px;
}

#facebook-login {
  background-color: #26A69A;
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
}

.reservation-form-field {
    margin-bottom: 0; 
    font-size: 2.0em; 
    line-height: 1.25em;
}

    #facebook-login p {
        text-align: center;
        color: #00415d;
        font-size: 1.5em; 
    }
    
    #facebook-login .login-box{
        position:relative;
        margin: 10px auto;
        width: 90%;
        height: 80%;
        background-color: #fff;
        padding: 10px;
        border-radius: 3px;
        -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
      -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
      box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
    }
    
    #facebook-login  .lb-header{
      position:relative;
      font-size: 2.5em;
      color: #00415d;
      margin: 5px 5px 10px 5px;
      padding-bottom:10px;
      border-bottom: 1px solid #eee;
      text-align:center;
    }
    
    #facebook-login .lb-header a{
      margin: 0 25px;
      padding: 0 20px;
      text-decoration: none;
      color: #666;
      font-weight: bold;
      font-size: 15px;
      -webkit-transition: all 0.1s linear;
      -moz-transition: all 0.1s linear;
      transition: all 0.1s linear;
    }
    
    #facebook-login .lb-header .active{
      color: #26A69A;
      font-size: 18px;
    }
/* ... */

